...
    func showAlert() {
        
        QueueSoundManage.shared.playSoundsInSequence(with: ["warning", "alert1", "activated1"], fileExtension: "wav")
        
        
        let model = AlertModel(
            title: "Раунд окончен", // Заголовок
            message: "Ваш результат: \(movieQuizPresenter.gameResult.correct)/\(movieQuizPresenter.gameResult.total)\n" +
            "Количество сыгранных квизов: \(statisticService.gamesCount) \n" +
            "Рекорд: \(statisticService.bestGame.correct)/\(statisticService.bestGame.total) (\(statisticService.bestGame.date) \n" +
            "Средняя точность: \(String(format: "%.2f", statisticService.totalAccuracy))%", // Сообщение
            buttonText: "Сыграть еще раз.",
            buttonText2: "Сброс статистики.",
            completion: { [self] in
                print("Кнопка Сыграть еще раз нажата!")
                movieQuizPresenter.resetQuiz()
                
                QueueSoundManage.shared.playSoundsInSequence(with: ["accepted"], fileExtension: "wav")
...
