...
        case .fileNotFound:
            if alertActive == false {
                QueueSoundManage.shared.playSoundsInSequence(with: ["access", "denied", "alert", "activated"], fileExtension: "wav")
                alertActive = true
            }
            return AlertModel(
                title: "Ошибка!",
                message: "Не найден файл JSON с вопросами! \n" +
                "Запустить МОК-данные из массива" +
                "или запустить данные из Сети?",
                buttonText: "Запустить МОК-данные.",
                buttonText2: "Запустить данные из сети.",
                buttonText3: "Полная отмена!",
                completion: {
                    questionFactory.loadFromMock()
                },
                completion2: {
...
